# assettool

./: .gitmodules  CMakeLists.txt
include/: mesh_convert.hpp  options.hpp  texture_convert.hpp
src/: main.cpp  mesh_convert.cpp  texture_convert.cpp
